--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
     "@typescript/vfs": "1.5.0",
     "babel-jest": "^29.7.0",
     "esbuild": "0.19.9",
+    "eslint": "^8.56.0",
     "firebase": "^10.7.1",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
