--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
         "resolveJsonModule": true,
         "noImplicitAny": false,
         "allowJs": true,
+        "sourceMap": true,
+        "inlineSourceMap": true,
         // "checkJs": true,
         "outDir": "dist",
         },
