--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "firebase": "^10.7.1",
     "glob": "^10.3.10",
     "jest": "^29.7.0",
+    "monaco-editor": "^0.45.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.1"
   },
